# Laptop_Price_Prediction_GCP_MLOPS

./: .dvcignore  .gitignore  Dockerfile  LICENSE  README.md  dvc.yaml  main.py  mlflow.db  pyproject.toml  requirements.txt  template.py
.github/workflows/: ci_cd.yaml
gcp/deployment/cloud_run/: app.py
gcp/monitoring/: logging_config.py  monitoring.py
notebook/: df.joblib  laptop-price-prediction (1).ipynb
scripts/: deploy_cloud_run.sh
src/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_pusher_mlflow.py  model_trainer.py
src/constants/: __init__.py
src/entity/: config_entity.py
src/mlflow_tracking/: mlflow_logger.py
src/utils/: gcp_utils.py  helpers.py  logger.py
