[project]
name = "laptop-price-prediction-gcp-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagshub>=0.7.0",
    "dvc>=3.67.1",
    "fastapi>=0.136.0",
    "google-cloud-storage>=3.10.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.44.0",
    "xgboost-cpu>=3.2.0",
]
